--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <title>iTruñer</title>
 
-  <base href="/" />
+  <base href="./" />
 
   <meta name="color-scheme" content="light dark" />
   <meta name="viewport"
@@ -19,7 +19,6 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css"
     integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
     crossorigin="" />
-
 
 
   <!-- add to homescreen for ios -->
